--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 这是一个很小的静态页面，用来庆祝我跟我mm相恋一周年纪念日。同时也为了以程序员的视角来表达浪漫，改变大家对于程序员先入为主的形象，程序员改变世界~
 时间仓促，有很多没有考虑到的地方，大家可以自由的进行二次开发。
+
+注意：月份取值范围是0~11，如果按照实际月份取得话会相差30或31天，即一个月的时间。
+
 项目主页：http://love.hackerzhou.me
